hphp/hack/test/typecheck/shape_key_exists8.php.exp
File "shape_key_exists8.php", line 6, characters 30-35:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
